--- a/Pages/About.html
+++ b/Pages/About.html
@@ -4,10 +4,8 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Texas Tick Fever Events</title>
-		<link rel="stylesheet" type="text/css" href="CSS/Website.css"/>
-		<link rel="stylesheet" type="text/css" href="bootstrap-3.3.7-dist/css/bootstrap.min.css"/>
-		<link rel="stylesheet" type="javascript" href="javascript/javascript.js"/>
-		
+		<link rel="stylesheet" type="text/css" href="../CSS/Website.css"/>
+		<link rel="stylesheet" type="text/css" href="../bootstrap-3.3.7-dist/css/bootstrap.min.css"/>
 	</head>
 		<body>
 			<nav class="navbar navbar-inverse navbar-static-top">
@@ -27,12 +25,11 @@
 								<li><a href="Media.html">Media</a></li>
 								<li><a href="Events.html">Events</a></li>
 								<li><a href="Contact Us.html">Contact Us</a></li>
-
 							</ul>
 					</div>
 			</nav>
 
-				<div class="col-md-10 col-md-offset-1" id="styledcontainer">
+				<div class="col-md-10 col-md-offset-1 container">
 					<h1>About the Texas Ticks</h1>
 					<div class="col-sm-12" id="aboutusdiv">
 						<p> In 2017 two good friends from the Deep South found themselves magically transported to the heart of the English Cotswolds with nothing but guitar and a banjo for company. 
@@ -40,12 +37,13 @@
 						</p>	
 					</div>
 					<div class="col-sm-6">
-						<p>Determined to make the best of their plight they pledged an oath to one another....To bring tales of loss, love, beards, moonshine and reptiles to a new audience.
+						<p>Determined to make the best of their plight they pledged an oath to one another....To bring tales of loss, love, beards, moonshine and reptiles to a new audience, in the form of Americana and Blues style music.
 						</p>
 					</div>
 					<div class="col-sm-6">
 						<p>
-							And so Texas Tick Fever were born,
+							And so Texas Tick Fever were born.
+
 							Featuring Doctor Slash on vocals and an ever increasing assortment of guitars and Reverend Stretch on vocals, guitar and banjo with a little kickdrum for good measure.
 
 							Available for hoedowns, square dances. barn raisin and general good times.
@@ -54,12 +52,12 @@
 					</div>
 					<div class="col-sm-10">
 						<p>
-							We are a Americana/Blues playing style kinda Texas duo, Please look at our videos and Pictures.
+							Looking for a taste of the Texas Ticks? Please look at our videos and Pictures.
 						</p>
 					</div>
 				</div>
 			<script src="http://code.jquery.com/jquery.min.js"></script>
-			<script src=bootstrap-3.3.7-dist/js/bootstrap.min.js></script>
+			<script src=../bootstrap-3.3.7-dist/js/bootstrap.min.js></script>
 		</body>
-		<div class="navbar navbar-fixed-bottom" id="footer">Copy Right</div>
+		<div class="navbar navbar-fixed-bottom footer">Copy Right</div>
 	</html>
