--- a/Pages/Events.html
+++ b/Pages/Events.html
@@ -4,10 +4,8 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Texas Tick Fever Events</title>
-		<link rel="stylesheet" type="text/css" href="CSS/Website.css">
-		<link rel="stylesheet" type="text/css" href="bootstrap-3.3.7-dist/css/bootstrap.min.css"/>
-		<link rel="stylesheet" type="text/css" href="Fonts/carnevalee freakshow.ttf">
-		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+		<link rel="stylesheet" type="text/css" href="../CSS/Website.css">
+		<link rel="stylesheet" type="text/css" href="../bootstrap-3.3.7-dist/css/bootstrap.min.css"/>
 	</head>
 		<body>
 			<nav class="navbar navbar-inverse navbar-static-top">
@@ -31,7 +29,7 @@
 					</div>
 			</nav>
 
-			<div class="col=md-10 col-md-10-offset-1" id="styledcontainer">
+			<div class="col=md-10 col-md-10-offset-1 container">
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -41,7 +39,8 @@
 					</p>	
 			</div>
 			<script src="http://code.jquery.com/jquery.min.js"></script>
-			<script src=bootstrap-3.3.7-dist/js/bootstrap.min.js></script>
+			<script src=../bootstrap-3.3.7-dist/js/bootstrap.min.js></script>
+			<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 		</body>
-		<div class="navbar navbar-fixed-bottom" id="footer">Copy Right</div>
+		<div class="navbar navbar-fixed-bottom footer">Copy Right</div>
 	</html>
