--- a/Pages/Home.html
+++ b/Pages/Home.html
@@ -4,9 +4,8 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Texas Tick Fever Home</title>
-		<link rel="stylesheet" type="text/css" href="CSS/Website.css">
-		<link rel="stylesheet" type="text/css" href="bootstrap-3.3.7-dist/css/bootstrap.min.css"/>
-		<link rel="stylesheet" type="text/css" href="fonts/carnevalee freakshow.ttf">
+		<link rel="stylesheet" type="text/css" href="../CSS/Website.css">
+		<link rel="stylesheet" type="text/css" href="../bootstrap-3.3.7-dist/css/bootstrap.min.css"/>
 	</head>
 		<body>
 			<nav class="navbar navbar-inverse navbar-static-top">
@@ -30,15 +29,15 @@
 					</div>
 			</nav>
 
-			<div class="col-md-12">
+			<div class="col-md-12 container">
 				<h1><span>Welcome to</span> Texas Tick Fever's <span>Knee Slappin Website!!</span></h1>
 			</div>
 
 
-
+			<script type="text/javascript" src="../JQuery effects/jquery.js"></script>
 			<script src="http://code.jquery.com/jquery.min.js"></script>
-			<script src="bootstrap-3.3.7-dist/js/bootstrap.min.js"></script>
+			<script src="../bootstrap-3.3.7-dist/js/bootstrap.min.js"></script>
 
 		</body>
-		<div class="navbar navbar-fixed-bottom" id="footer">Copy Right</div>
+		<div class="navbar navbar-fixed-bottom footer">Copy Right</div>
 	</html>
