--- a/Pages/About.html
+++ b/Pages/About.html
@@ -7,9 +7,9 @@
 		<link rel="stylesheet" type="text/css" href="../CSS/Website.css"/>
 		<link rel="stylesheet" type="text/css" href="../bootstrap-3.3.7-dist/css/bootstrap.min.css"/>
 	</head>
-		<body>
+		<body id="about">
 			<nav class="navbar navbar-inverse navbar-static-top">
-					<div class="container">
+					<div class="navcontainer">
 						<div class="navbar-header">
 							<a class="navbar-brand" href="Home.html">Texas Tick Fever</a>
 							<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#CollapsingList">
@@ -24,40 +24,45 @@
 								<li><a href="About.html">About</a></li>
 								<li><a href="Media.html">Media</a></li>
 								<li><a href="Events.html">Events</a></li>
-								<li><a href="Contact Us.html">Contact Us</a></li>
+								<li><a href="Contact Us.html">Book Us</a></li>
 							</ul>
 					</div>
 			</nav>
 
-				<div class="col-md-10 col-md-offset-1 container">
-					<h1>About the Texas Ticks</h1>
-					<div class="col-sm-12" id="aboutusdiv">
-						<p> In 2017 two good friends from the Deep South found themselves magically transported to the heart of the English Cotswolds with nothing but guitar and a banjo for company. 
-			
-						</p>	
-					</div>
-					<div class="col-sm-6">
-						<p>Determined to make the best of their plight they pledged an oath to one another....To bring tales of loss, love, beards, moonshine and reptiles to a new audience, in the form of Americana and Blues style music.
-						</p>
-					</div>
-					<div class="col-sm-6">
-						<p>
-							And so Texas Tick Fever were born.
+									
+					<article class="row-sm-2 aboutus0">
+						<h1>About the Texas Ticks</h1>
+					</article>
 
-							Featuring Doctor Slash on vocals and an ever increasing assortment of guitars and Reverend Stretch on vocals, guitar and banjo with a little kickdrum for good measure.
+					<div class="col-sm-10 col-sm-offset-2 about">
 
-							Available for hoedowns, square dances. barn raisin and general good times.
+						<article class="col-sm-5 aboutus1 container">
+							<h1>Meet Stretch</h1>
+								<img id="aboutpic1"></img>
+									<p> In 2017 two good friends from the Deep South found themselves magically transported to the heart of the English Cotswolds with nothing but guitar and a banjo for company. 
+									</p>
 
-						</p>
+									<p>Determined to make the best of their plight they pledged an oath to one another....To bring tales of loss, love, beards, moonshine and reptiles to a new audience, in the form of Americana and Blues style music.
+							</p>
+						</article>
+
+						<article class="col-sm-5 aboutus2 container1">
+							<h1>Meet Dr, Slash!</h1>
+								<img id="aboutpic2"></img>
+									<p>
+										and so...Texas Tick Fever were born,
+
+										Featuring Doctor Slash on vocals and an ever increasing assortment of guitars and Reverend Stretch on vocals, guitar and banjo with a little kickdrum for good measure.
+
+										Available for hoedowns, square dances. barn raisin and general good times.
+									</p>
+						</article>
 					</div>
-					<div class="col-sm-10">
-						<p>
-							Looking for a taste of the Texas Ticks? Please look at our videos and Pictures.
-						</p>
-					</div>
-				</div>
+
+
 			<script src="http://code.jquery.com/jquery.min.js"></script>
 			<script src=../bootstrap-3.3.7-dist/js/bootstrap.min.js></script>
+		
+			<footer class="navbar navbar-fixed-bottom footer">Copyright <span id=copyright> &copy; </span> 2018 </footer>
 		</body>
-		<div class="navbar navbar-fixed-bottom footer">Copy Right</div>
 	</html>
