--- a/Pages/Events.html
+++ b/Pages/Events.html
@@ -7,9 +7,9 @@
 		<link rel="stylesheet" type="text/css" href="../CSS/Website.css">
 		<link rel="stylesheet" type="text/css" href="../bootstrap-3.3.7-dist/css/bootstrap.min.css"/>
 	</head>
-		<body>
+		<body id="events">
 			<nav class="navbar navbar-inverse navbar-static-top">
-					<div class="container">
+					<div class="navcontainer">
 						<div class="navbar-header">
 							<a class="navbar-brand" href="home.html">Texas Tick Fever</a>
 							<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#CollapsingList">
@@ -24,23 +24,32 @@
 								<li><a href="About.html">About</a></li>
 								<li><a href="Media.html">Media</a></li>
 								<li><a href="Events.html">Events</a></li>
-								<li><a href="Contact Us.html">Contact Us</a></li>
+								<li><a href="Contact Us.html">Book Us</a></li>
 							</ul>
 					</div>
 			</nav>
-
-			<div class="col=md-10 col-md-10-offset-1 container">
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-					</p>	
+			<div class="col-sm-4 col-sm-offset-4 container">
+				<h1>Events</h1>
 			</div>
-			<script src="http://code.jquery.com/jquery.min.js"></script>
-			<script src=../bootstrap-3.3.7-dist/js/bootstrap.min.js></script>
-			<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+
+
+			<div class="col-sm-8 col-sm-offset-2 container eventsmapcontainer">
+				<h1>Find US at the Crown and Sceptre</h1>
+					<iframe class="map" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d9882.125595721523!2d-2.2035762!3d51.7416058!3m2!1i1024!2i768!4f13.1!3m	3!1m2!1s0x0%3A0x60ad43dc0350109!2sThe+Crown+%26+Sceptre!5e0!3m2!1sen!2suk!4v1511687367286" width="450" height="300" frameborder="0" style="border:0" allowfullscreen>
+					</iframe>
+					<p>We are often playing in the Crown and Sceptre Inn and many other events, contact us through our 
+					"BOOK US" Tab at the top of the page or <a href="Contact Us.html"><b><span id="bookUsLink">"Click here"</span></b></a> instead if you'd like to find out when we are playing there next.
+					</p> 
+
+					<p>If you want us to play at your big event, please get in contact as suggested above, we dont bite!</p>
+			</div>
+
+
+				<script src="https//maps.googleapis.com/maps/api/js?key=AIzaSyBMrVenbbB4W_aqlgdzTdkp8_6rzErCmMI&callback=myMap"></script>
+				<script src="http://code.jquery.com/jquery.min.js"></script>
+				<script src=../bootstrap-3.3.7-dist/js/bootstrap.min.js></script>
+				<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+			<footer class="navbar navbar-fixed-bottom footer">Copyright <span id="copyright">&copy;</span> 2018</footer>
 		</body>
-		<div class="navbar navbar-fixed-bottom footer">Copy Right</div>
+		
 	</html>
