--- a/Pages/Home.html
+++ b/Pages/Home.html
@@ -4,12 +4,16 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Texas Tick Fever Home</title>
+		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+		<link rel="stylesheet" type="text/javascript" href="../jquery/jquery-3.2.1.js">
 		<link rel="stylesheet" type="text/css" href="../CSS/Website.css">
 		<link rel="stylesheet" type="text/css" href="../bootstrap-3.3.7-dist/css/bootstrap.min.css"/>
 	</head>
-		<body>
-			<nav class="navbar navbar-inverse navbar-static-top">
-					<div class="container">
+		<body id="home">
+		<div>
+			<div>
+				<nav class="navbar navbar-inverse navbar-static-top">
+					<div class="navcontainer">
 						<div class="navbar-header">
 							<a class="navbar-brand" href="home.html">Texas Tick Fever</a>
 							<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#CollapsingList">
@@ -17,27 +21,25 @@
 								<span class="icon-bar"></span>
 								<span class="icon-bar"></span>
 							</button>
-
 						</div>
-							<ul class="nav navbar-nav collapse navbar-collapse navbar-right" id="CollapsingList">
-								<li><a href="Home.html">Home</a></li>
-								<li><a href="About.html">About</a></li>
-								<li><a href="Media.html">Media</a></li>
-								<li><a href="Events.html">Events</a></li>
-								<li><a href="Contact Us.html">Contact Us</a></li>
-							</ul>
+						<ul class="nav navbar-nav collapse navbar-collapse navbar-right" id="CollapsingList">
+							<li><a href="Home.html">Home</a></li>
+							<li><a href="About.html">About</a></li>
+							<li><a href="Media.html">Media</a></li>
+							<li><a href="Events.html">Events</a></li>
+							<li><a href="Contact Us.html">Book Us</a></li>
+						</ul>
 					</div>
-			</nav>
-
-			<div class="col-md-12 container">
-				<h1><span>Welcome to</span> Texas Tick Fever's <span>Knee Slappin Website!!</span></h1>
+				</nav>
 			</div>
+					<section class="col-md-6 col-md-offset-1 container">
+				<h1><span>Welcome to</span> Texas Tick Fever's <span>Knee Slappin Website!!</span></h1>
+			</section>
 
-
-			<script type="text/javascript" src="../JQuery effects/jquery.js"></script>
-			<script src="http://code.jquery.com/jquery.min.js"></script>
-			<script src="../bootstrap-3.3.7-dist/js/bootstrap.min.js"></script>
-
+				
+				<script src="../bootstrap-3.3.7-dist/js/bootstrap.min.js"></script>
+				<script type="text/javascript" src="../JQuery effects/jquery.js"></script>
+			<footer class="navbar navbar-fixed-bottom footer">Copyright<span id="copyright"> &copy;</span> 2018</footer>
 		</body>
-		<div class="navbar navbar-fixed-bottom footer">Copy Right</div>
+		
 	</html>
