--- a/Pages/Home.html
+++ b/Pages/Home.html
@@ -5,9 +5,9 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Texas Tick Fever Home</title>
 		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-		<link rel="stylesheet" type="text/javascript" href="../jquery/jquery-3.2.1.js">
 		<link rel="stylesheet" type="text/css" href="../CSS/Website.css">
 		<link rel="stylesheet" type="text/css" href="../bootstrap-3.3.7-dist/css/bootstrap.min.css"/>
+		<script type="text/javascript" src="../JQuery effects/jquery.js"></script>
 	</head>
 		<body id="home">
 		<div>
@@ -32,13 +32,12 @@
 					</div>
 				</nav>
 			</div>
-					<section class="col-md-6 col-md-offset-1 container">
+					<section class="col-md-6 col-md-offset-1 container header1">
 				<h1><span>Welcome to</span> Texas Tick Fever's <span>Knee Slappin Website!!</span></h1>
 			</section>
 
-				
 				<script src="../bootstrap-3.3.7-dist/js/bootstrap.min.js"></script>
-				<script type="text/javascript" src="../JQuery effects/jquery.js"></script>
+				
 			<footer class="navbar navbar-fixed-bottom footer">Copyright<span id="copyright"> &copy;</span> 2018</footer>
 		</body>
 		
