--- a/Pages/Media.html
+++ b/Pages/Media.html
@@ -112,7 +112,7 @@
 						<div class="col-md-8 col-md-offset-2">
 								<h1>Our Videos</h1>
 						</div>
-							<div class="col-md-8 col-md-offset-4">
+							<!--<div class="col-md-8 col-md-offset-4">
 								<div class="row-md-8 col-md-right" id="video1">
 								<video controls="controls">
 									<source src="" type="video/mp4">
@@ -125,10 +125,15 @@
 								<video controls="controls">
 									<source src="" id="video/mp4">
 								</video>
-							</div>
-							<iframe type="text/html" src="https://www.youtube.com/watch?v=Ajr49H2ZsOg&feature=share"></iframe>
+							</div>-->
 
-							<iframe type="text/html" src="https://www.youtube.com/watch?v=XaVr-kdozSY&feature=share"></iframe>
+							<iframe class="col-sm-4 col-sm offset-0" id="Philsolo" width="854" height="480" src="https://www.youtube.com/embed/GEZQtdiFNHA" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
+
+							<iframe class="col-sm-4" id="Philsolo" width="854" height="480" src="https://www.youtube.com/embed/XaVr-kdozSY" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
+
+							<iframe class="col-sm-4" id="Philsolo" width="854" height="480" src="https://www.youtube.com/embed/iS78p9R7O8E" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
+
+							<iframe class="col-sm-4" id="Philsolo" width="854" height="480" src="https://www.youtube.com/embed/Ajr49H2ZsOg" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
 					</section>
 					
 
