--- a/Pages/Events.html
+++ b/Pages/Events.html
@@ -34,11 +34,11 @@
 
 
 			<div class="col-sm-8 col-sm-offset-2 container eventsmapcontainer">
-				<h1>Find US at the Crown and Sceptre</h1>
+				<h1>Find US at the Crown and Sceptre<img id="facebooklink"></img></h1>
 					<iframe class="map" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d9882.125595721523!2d-2.2035762!3d51.7416058!3m2!1i1024!2i768!4f13.1!3m	3!1m2!1s0x0%3A0x60ad43dc0350109!2sThe+Crown+%26+Sceptre!5e0!3m2!1sen!2suk!4v1511687367286" width="450" height="300" frameborder="0" style="border:0" allowfullscreen>
 					</iframe>
 					<p>We are often playing in the Crown and Sceptre Inn and many other events, contact us through our 
-					"BOOK US" Tab at the top of the page or <a href="Contact Us.html"><b><span id="bookUsLink">"Click here"</span></b></a> instead if you'd like to find out when we are playing there next.
+					"BOOK US" Tab at the top of the page or <a href="Contact Us.html"><b><span id="bookUsLink">"Click here"</span></b></a> instead.
 					</p> 
 					<br>
 					<br>
