--- a/Pages/Home.html
+++ b/Pages/Home.html
@@ -10,6 +10,7 @@
 		<script type="text/javascript" src="../JQuery effects/jquery.js"></script>
 	</head>
 		<body id="home">
+
 		<div>
 			<div>
 				<nav class="navbar navbar-inverse navbar-static-top">
@@ -32,10 +33,15 @@
 					</div>
 				</nav>
 			</div>
-					<section class="col-md-6 col-md-offset-1 container header1">
-				<h1><span>Welcome to</span> Texas Tick Fever's <span>Knee Slappin Website!!</span></h1>
+			<section class="col-md-12">
+				<section class="col-md-6 col-md-offset-1 container header1">
+					<h1><span>Welcome to</span> Texas Tick Fever's <span>Knee Slappin Website!!</span></h1>
+				</section>		
+				<section class="col-md-1 col-md-offset-3 fblink">
+					<img id="facebooklink"></img>
+				</section>
 			</section>
-
+			
 				<script src="../bootstrap-3.3.7-dist/js/bootstrap.min.js"></script>
 				
 			<footer class="navbar navbar-fixed-bottom footer">Copyright<span id="copyright"> &copy;</span> 2018</footer>
