--- a/Pages/About.html
+++ b/Pages/About.html
@@ -4,8 +4,10 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Texas Tick Fever Events</title>
+		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 		<link rel="stylesheet" type="text/css" href="../CSS/Website.css"/>
 		<link rel="stylesheet" type="text/css" href="../bootstrap-3.3.7-dist/css/bootstrap.min.css"/>
+		<script type="text/javascript" src="../JQuery effects/jquery.js"></script>
 	</head>
 		<body id="about">
 			<nav class="navbar navbar-inverse navbar-static-top">
