--- a/Pages/About.html
+++ b/Pages/About.html
@@ -32,39 +32,46 @@
 			</nav>
 
 									
-					<article class="row-sm-2 aboutus0">
+					<article class="col-md-8 col-md-offset-2 aboutus0 container">
 						<h1>About the Texas Ticks</h1>
 					</article>
 
-					<div class="col-sm-12 col-sm-offset-0 about">
+					<div class="col-md-10 col-md-offset-2 about">
 
-						<article class="col-sm-6 aboutus1 container">
-							<h1>Meet Stretch</h1>
-								<img id="aboutpic1"></img>
+						<article class="col-md-5 aboutus1 container">
+							<h1 class="aboutdivheader">Meet Stretch!</h1>
+								<img class="col-md-6" id="aboutpic1"></img>
+								<div class="col-md-6 aboutdiv1">
 									<p> In 2017 two good friends from the Deep South found themselves magically transported to the heart of the English Cotswolds with nothing but guitar and a banjo for company. 
 									</p>
-
 									<p>Determined to make the best of their plight they pledged an oath to one another....To bring tales of loss, love, beards, moonshine and reptiles to a new audience, in the form of Americana and Blues style music.
-							</p>
+									</p>
+								</div>
 						</article>
 
-						<article class="col-sm-6 aboutus2 container1">
-							<h1>Meet Dr, Slash!</h1>
-								<img id="aboutpic2"></img>
-									<p>
+						<article class="col-md-5 aboutus2 container">
+							<h1 class="aboutdivheader">Meet Dr, Slash!</h1>
+									<img class="col-md-6" id="aboutpic2"></img>
+									<div class="col-md-6 aboutdiv2">
+										<p>
 										and so...Texas Tick Fever were born,
 
 										Featuring Doctor Slash on vocals and an ever increasing assortment of guitars and Reverend Stretch on vocals, guitar and banjo with a little kickdrum for good measure.
 
 										Available for hoedowns, square dances. barn raisin and general good times.
-									</p>
+										</p>
+									</div>
 						</article>
 					</div>
+
+						<article class="col-sm-6 col-sm-offset-3 aboutmedia">
+							<h1>Please see our Media page</h1>
+						</article>
 
 
 			<script src="http://code.jquery.com/jquery.min.js"></script>
 			<script src=../bootstrap-3.3.7-dist/js/bootstrap.min.js></script>
 		
-			<footer class="navbar navbar-fixed-bottom footer">Copyright <span id=copyright> &copy; </span> 2018 </footer>
+			<div class="navbar navbar-fixed-bottom footer">Copyright <span id=copyright> &copy; </span> 2018 </div>
 		</body>
 	</html>
