--- a/Pages/Events.html
+++ b/Pages/Events.html
@@ -4,8 +4,10 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Texas Tick Fever Events</title>
+		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 		<link rel="stylesheet" type="text/css" href="../CSS/Website.css">
 		<link rel="stylesheet" type="text/css" href="../bootstrap-3.3.7-dist/css/bootstrap.min.css"/>
+		<script type="text/javascript" src="../JQuery effects/jquery.js"></script>
 	</head>
 		<body id="events">
 			<nav class="navbar navbar-inverse navbar-static-top">
@@ -33,16 +35,18 @@
 			</div>
 
 
-			<div class="col-sm-8 col-sm-offset-2 container eventsmapcontainer">
+			<div class="col-sm-6 eventsmapcontainer">
 				<h1>Find US at the Crown and Sceptre<img id="facebooklink"></img></h1>
-					<iframe class="map" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d9882.125595721523!2d-2.2035762!3d51.7416058!3m2!1i1024!2i768!4f13.1!3m	3!1m2!1s0x0%3A0x60ad43dc0350109!2sThe+Crown+%26+Sceptre!5e0!3m2!1sen!2suk!4v1511687367286" width="450" height="300" frameborder="0" style="border:0" allowfullscreen>
+					<iframe class="col-md-12 map" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d9882.125595721523!2d-2.2035762!3d51.7416058!3m2!1i1024!2i768!4f13.1!3m	3!1m2!1s0x0%3A0x60ad43dc0350109!2sThe+Crown+%26+Sceptre!5e0!3m2!1sen!2suk!4v1511687367286" width="250" height="45" frameborder="0" allowfullscreen>
 					</iframe>
-					<p>We are often playing in the Crown and Sceptre Inn and many other events, contact us through our 
+						
+					<div class="col-md-12 mapdiv">
+					<p>We are often playing at the Crown and Sceptre in Stroud and many other events. 
+					We are availabe for bookings, please contact us through our 
 					"BOOK US" Tab at the top of the page or <a href="Contact Us.html"><b><span id="bookUsLink">"Click here"</span></b></a> instead.
 					</p> 
-					<br>
-					<br>
-					<p>If you want us to play at your big event, please get in contact as suggested above, we dont bite!</p>
+					<p> We are available to play at your big event!, please get in contact, we dont bite!</p>
+				</div>
 			</div>
 
 
@@ -50,7 +54,7 @@
 				<script src="http://code.jquery.com/jquery.min.js"></script>
 				<script src=../bootstrap-3.3.7-dist/js/bootstrap.min.js></script>
 				<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-			<footer class="navbar navbar-fixed-bottom footer">Copyright <span id="copyright">&copy;</span> 2018</footer>
+			<div class="navbar navbar-fixed-bottom footer">Copyright <span id="copyright">&copy;</span> 2018</div>
 		</body>
 		
 	</html>
