--- a/Pages/Home.html
+++ b/Pages/Home.html
@@ -38,13 +38,27 @@
 					<h1><span>Welcome to</span> Texas Tick Fever's <span>Knee Slappin Website!!</span></h1>
 				</section>		
 				<section class="col-md-1 col-md-offset-3 fblink">
-					<img id="facebooklink"></img>
+					<a href="https://www.facebook.com"><img id="facebooklink"></img></a>
 				</section>
 			</section>
-			
+
 				<script src="../bootstrap-3.3.7-dist/js/bootstrap.min.js"></script>
 				
-			<footer class="navbar navbar-fixed-bottom footer">Copyright<span id="copyright"> &copy;</span> 2018</footer>
+			<footer class="navbar navbar-fixed-bottom footer">Copyright<span id="copyright"> &copy;</span> 2018
+				<button onclick="creditsFunction()" input type="submit" class="btn btn-primary btn-sm btn-inlineblock creditsBtn">Credits</button>
+			</footer>
+
+				<script>
+					function creditsFunction() {
+              			alert("Website Created by Matthew Addicott, EMAIL: Exerriddiam@hotmail.co.uk  Want a Website? please email me :)")
+
+              			alert("FONT Durango https://www.1001freefonts.com/search.php?q=old+town&search=search) Durango & Durango DEMO VERSION Created by Dennis Ludlow 2017 all rights resereved by Sharkshock")
+              					
+              			alert("FONT Old Town https://www.1001freefonts.com/search.php?q=old+town&search=search) OldTown created by Dieter Steffmann all rights reservered")
+
+              			alert("http://moorstation.org/typoasis/designers/steffmann/index.htm.https://www.dafont.com/quentincaps.font) Quintin Caps Created by Dieter Staffmann all rights reservered.")
+              		}
+				</script>
 		</body>
 		
 	</html>
