--- a/Pages/Media.html
+++ b/Pages/Media.html
@@ -53,47 +53,31 @@
 								<div class="item active">
 									<img src="../Img/duopickup1.jpg" alt="img should be here">
 									<div class="carousel-caption">
-										<h3></h3>
-										<p>Comment on picture 1</p>
+										<h3>Picture Taken and supplied by...............please see.......page</h3>
 									</div>
 								</div>
 
 								<div class="item">
 									<img src="../img/duopickup2.jpg" alt="img should be here">
-										<div class="carousel-caption">
-										<h3>Heading for second picture</h3>
-										<p>comment on picture 2</p>
-									</div>
 								</div>
 
 								<div class="item">
 									<img src="../img/duoplaying.jpg" alt="img should should be here">
-										<div class="carousel-caption">
-										<h3>Heading for picture 3</h3>
-										<p>comment on particular picture</p>
-									</div>
 								</div>
 								
 								<div class="item">
-									<img src="../img/philsteel.jpg" alt="slash and guitar picture">
+									<img src="../img/philstretch2.jpg" alt="slash and guitar picture">
 									<div class="carousel-caption">
-									<h3>Heading for picture 4</h3>
-									<p> comment</p>
 									</div>
 								</div>
 
 								<div class="item">
 									<img src="../img/philstretch.jpg" alt="slash and stretch">
 									<div class="carosuel-caption">
-									<h3>Heading for picture 5</h3>
-									<p>Comment</p>
 									</div>
 								</div>
-
 							</div>
 
-
-														<!--Left and Right Controls for carousel-->
 								<a class="left carousel-control" href="#carousel" data-slide="prev">
 									<span class="glyphicon glyphicon-chevron-left"></span>
 									<span class="sr-only">Next</span>
@@ -108,38 +92,22 @@
 					</div>
 				</section>
 
-					<section class="col-md-10 col-md-offset-1">
-						<div class="col-md-8 col-md-offset-2">
-								<h1>Our Videos</h1>
+					<section class="col-md-12">
+						<div class="col-md-8 col-md-offset-2 VideosHeader">
+								<h1>Videos</h1>
 						</div>
-							<!--<div class="col-md-8 col-md-offset-4">
-								<div class="row-md-8 col-md-right" id="video1">
-								<video controls="controls">
-									<source src="" type="video/mp4">
-								<video>
-							</div>
 
-						</div>
-							<div class="col-md-10 col-md-offset-4">
-								<div class="row-md-8 row-md-offset-4" id="video2">
-								<video controls="controls">
-									<source src="" id="video/mp4">
-								</video>
-							</div>-->
+							<iframe class="col-sm-4" id="video" width="854" height="480" src="https://www.youtube.com/embed/iS78p9R7O8E" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
 
-							<iframe class="col-sm-4 col-sm offset-0" id="Philsolo" width="854" height="480" src="https://www.youtube.com/embed/GEZQtdiFNHA" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
+							<iframe class="col-sm-4" id="video" width="854" height="480" src="https://www.youtube.com/embed/CXRo0GMimYI" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
 
-							<iframe class="col-sm-4" id="Philsolo" width="854" height="480" src="https://www.youtube.com/embed/XaVr-kdozSY" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
-
-							<iframe class="col-sm-4" id="Philsolo" width="854" height="480" src="https://www.youtube.com/embed/iS78p9R7O8E" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
-
-							<iframe class="col-sm-4" id="Philsolo" width="854" height="480" src="https://www.youtube.com/embed/Ajr49H2ZsOg" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
+							<iframe class="col-sm-4" id="video" width="854" height="480" src="https://www.youtube.com/embed/XnXZtcypfp0" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
 					</section>
 					
-
 			<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 			<script src="../bootstrap-3.3.7-dist/js/bootstrap.min.js"></script>
-			
+
+			<footer class="navbar navbar-fixed-bottom footer">Copyright <span id="copyright">&copy;</span> 2018 </footer>
 		</body>
-		<footer class="navbar navbar-fixed-bottom footer">Copyright <span id="copyright">&copy;</span> 2018 </footer>
+		
 </html>
