--- a/contact us.html
+++ b/contact us.html
@@ -1,14 +1,14 @@
-<DOCTYPE html>
+<!DOCTYPE html>
 	<html>
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Texas Tick Fever Contact Us</title>
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-		<link rel="stylesheet" type="text/css" href="../CSS/Website.css">
-		<link rel="stylesheet" type="text/css" href="../bootstrap-3.3.7-dist/css/bootstrap.min.css"/>
-    <link rel="stylesheet" type="javascript" href="../javascript/javascript.js"/>
-    <script type="text/javascript" src="../JQuery effects/jquery.js"></script>
+		<link rel="stylesheet" type="text/css" href="./CSS/Website.css">
+		<link rel="stylesheet" type="text/css" href="./bootstrap-3.3.7-dist/css/bootstrap.min.css"/>
+    <link rel="stylesheet" type="javascript" href="./javascript/javascript.js"/>
+    <script type="text/javascript" src="./JQuery effects/jquery.js"></script>
 	</head>
 		<body id=contact>
 			<nav class="navbar navbar-inverse navbar-static-top">
@@ -234,7 +234,7 @@
         </form>
       </section>
         <script src="http://code.jquery.com/jquery.min.js"></script>
-        <script src="../bootstrap-3.3.7-dist/js/bootstrap.min.js"></script>
+        <script src="./bootstrap-3.3.7-dist/js/bootstrap.min.js"></script>
         <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <footer class="navbar navbar-fixed-bottom footer">Copyright <span id=copyright> &copy;</span> 2018</footer>
   </body>
