--- a/home.html
+++ b/home.html
@@ -1,13 +1,13 @@
-<DOCTYPE html>
+<!DOCTYPE html>
 	<html>
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Texas Tick Fever Home</title>
 		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-		<link rel="stylesheet" type="text/css" href="../CSS/Website.css">
-		<link rel="stylesheet" type="text/css" href="../bootstrap-3.3.7-dist/css/bootstrap.min.css"/>
-		<script type="text/javascript" src="../JQuery effects/jquery.js"></script>
+		<link rel="stylesheet" type="text/css" href="./CSS/Website.css">
+		<link rel="stylesheet" type="text/css" href="./bootstrap-3.3.7-dist/css/bootstrap.min.css"/>
+		<script type="text/javascript" src="./JQuery effects/jquery.js"></script>
 	</head>
 		<body id="home">
 
@@ -42,7 +42,7 @@
 				</section>
 			</section>
 
-				<script src="../bootstrap-3.3.7-dist/js/bootstrap.min.js"></script>
+				<script src="./bootstrap-3.3.7-dist/js/bootstrap.min.js"></script>
 				
 			<footer class="navbar navbar-fixed-bottom footer">Copyright<span id="copyright"> &copy;</span> 2018
 				<button onclick="creditsFunction()" input type="submit" class="btn btn-primary btn-sm btn-inlineblock creditsBtn">Credits</button>
