--- a/media.html
+++ b/media.html
@@ -1,11 +1,11 @@
-<DOCTYPE html>
+<!DOCTYPE html>
 	<html>
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Texas Tick Fever Pictures</title>
-		<link rel="stylesheet" type="text/css" href="../CSS/Website.css">
-		<link rel="stylesheet" type="text/css" href="../bootstrap-3.3.7-dist/css/bootstrap.min.css"/>
+		<link rel="stylesheet" type="text/css" href="./CSS/Website.css">
+		<link rel="stylesheet" type="text/css" href="./bootstrap-3.3.7-dist/css/bootstrap.min.css"/>
 	</head>
 		<body id="media">
 			<nav class="navbar navbar-inverse navbar-static-top">
@@ -105,7 +105,7 @@
 					</section>
 					
 			<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-			<script src="../bootstrap-3.3.7-dist/js/bootstrap.min.js"></script>
+			<script src="./bootstrap-3.3.7-dist/js/bootstrap.min.js"></script>
 
 			<footer class="navbar navbar-fixed-bottom footer">Copyright <span id="copyright">&copy;</span> 2018 </footer>
 		</body>
