--- a/events.html
+++ b/events.html
@@ -1,13 +1,13 @@
-<DOCTYPE html>
+<!DOCTYPE html>
 	<html>
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Texas Tick Fever Events</title>
 		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-		<link rel="stylesheet" type="text/css" href="../CSS/Website.css">
-		<link rel="stylesheet" type="text/css" href="../bootstrap-3.3.7-dist/css/bootstrap.min.css"/>
-		<script type="text/javascript" src="../JQuery effects/jquery.js"></script>
+		<link rel="stylesheet" type="text/css" href="./CSS/Website.css">
+		<link rel="stylesheet" type="text/css" href="./bootstrap-3.3.7-dist/css/bootstrap.min.css"/>
+		<script type="text/javascript" src="./JQuery effects/jquery.js"></script>
 	</head>
 		<body id="events">
 			<nav class="navbar navbar-inverse navbar-static-top">
@@ -52,7 +52,7 @@
 
 				<script src="https//maps.googleapis.com/maps/api/js?key=AIzaSyBMrVenbbB4W_aqlgdzTdkp8_6rzErCmMI&callback=myMap"></script>
 				<script src="http://code.jquery.com/jquery.min.js"></script>
-				<script src=../bootstrap-3.3.7-dist/js/bootstrap.min.js></script>
+				<script src=./bootstrap-3.3.7-dist/js/bootstrap.min.js></script>
 				<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 			<div class="navbar navbar-fixed-bottom footer">Copyright <span id="copyright">&copy;</span> 2018</div>
 		</body>
