--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
 							</button>
 						</div>
 						<ul class="nav navbar-nav collapse navbar-collapse navbar-right" id="CollapsingList">
-							<li><a href="Home.html">Home</a></li>
-							<li><a href="About.html">About</a></li>
-							<li><a href="Media.html">Media</a></li>
-							<li><a href="Events.html">Events</a></li>
-							<li><a href="Contact Us.html">Book Us</a></li>
+							<li><a href="index.html">Home</a></li>
+							<li><a href="about.html">About</a></li>
+							<li><a href="media.html">Media</a></li>
+							<li><a href="events.html">Events</a></li>
+							<li><a href="contact us.html">Book Us</a></li>
 						</ul>
 					</div>
 				</nav>
