--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Texas Tick Fever Home</title>
 		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-		<link rel="stylesheet" type="text/css" href="./CSS/Website.css">
+		<link rel="stylesheet" type="text/css" href="./css/website.css">
 		<link rel="stylesheet" type="text/css" href="./bootstrap-3.3.7-dist/css/bootstrap.min.css"/>
-		<script type="text/javascript" src="./JQuery effects/jquery.js"></script>
+		<script type="text/javascript" src="./jquery effects/jquery.js"></script>
 	</head>
 		<body id="home">
 
