--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
 		<title>Texas Tick Fever Home</title>
 		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 		<link rel="stylesheet" type="text/css" href="./css/website.css">
+		<script rel="stylesheet" type="text/css" src="https://exerriddiam.github.io/stream-1-project/css/website.css/"></script>
 		<link rel="stylesheet" type="text/css" href="./bootstrap-3.3.7-dist/css/bootstrap.min.css"/>
-		<script type="text/javascript" src="./jquery effects/jquery.js"></script>
+		<script type="text/javascript" src="https://exerriddiam.github.io/stream-1-project/jquery effects/jquery.js"></script>
 	</head>
 		<body id="home">
 
